refactor: time 수정 #184