@@ -1,14 +1,13 @@
 package com.settlement.controller;
 
 import java.time.LocalDateTime;
-import java.time.YearMonth;
 
 import org.springframework.batch.core.Job;
 import org.springframework.batch.core.JobParameters;
 import org.springframework.batch.core.JobParametersBuilder;
 import org.springframework.batch.core.launch.JobLauncher;
 import org.springframework.beans.factory.annotation.Qualifier;
-import org.springframework.format.annotation.DateTimeFormat;
+
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -41,30 +40,27 @@ public class SettlementBatchController {
      */
     @PostMapping("/manual")
     public ResponseEntity<String> runSettlementBatch(
-            @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE_TIME) LocalDateTime startDate,
-            @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE_TIME) LocalDateTime endDate) {
+            @RequestParam String startDate,
+            @RequestParam String endDate) {
 
         try {
-            // 파라미터가 없으면 전월 1일 ~ 마지막날로 설정
-            if (startDate == null || endDate == null) {
-                YearMonth lastMonth = YearMonth.from(LocalDateTime.now().minusMonths(1));
-                startDate = lastMonth.atDay(1).atStartOfDay();
-                endDate = lastMonth.atEndOfMonth().atTime(23, 59, 59);
-            }
+            LocalDateTime startDateTime;
+            LocalDateTime endDateTime;
 
-            log.info("정산 배치 수동 실행 요청 - 정산 기간: {} ~ {}", startDate, endDate);
+            startDateTime = LocalDateTime.parse(startDate);
+            endDateTime = LocalDateTime.parse(endDate);
 
-            // JobParameters 생성
+            log.info("정산 배치 수동 실행 요청 - 정산 기간: {} ~ {}", startDateTime, endDateTime);
+
             JobParameters jobParameters = new JobParametersBuilder()
-                    .addString("startDate", startDate.toString())
-                    .addString("endDate", endDate.toString())
+                    .addString("startDate", startDateTime.toString())
+                    .addString("endDate", endDateTime.toString())
                     .addLong("timestamp", System.currentTimeMillis())
                     .toJobParameters();
 
             // 배치 실행
             jobLauncher.run(settlementJob, jobParameters);
-
-            String message = String.format("정산 배치 실행 완료 - 정산 기간: %s ~ %s", startDate, endDate);
+            String message = "정산 배치 실행 완료 - 정산 기간: %s ~ %s".formatted(startDateTime, endDateTime);
             log.info(message);
 
             return ResponseEntity.ok(message);
